@@ -1,0 +1,4 @@
+Example: HD0
+
+By default, for mounted folders, the device name is DH0 for hard_drive_0,
+DH1 for hard_drive_1, etc. You can override this on a per-drive-basis.
