@@ -167,6 +167,7 @@ static void configure_hard_drive_directory(
     char *label_option_name = g_strdup_printf(
         "hard_drive_%d_label", index);
     char *label_option = fs_config_get_string(label_option_name);
+    g_free(label_option_name);
     if (label_option) {
         mount_name = label_option;
     } else {
@@ -185,6 +186,14 @@ static void configure_hard_drive_directory(
             mount_name[stop] = '\0';
         }
     }
+
+    char *device_option_name = g_strdup_printf(
+        "hard_drive_%d_device", index);
+    const char *device_option = fs_config_get_const_string(device_option_name);
+    if (device_option) {
+        device = device_option;
+    }
+    g_free(device_option_name);
 
     fs_emu_log("hard drive mount: %s\n", path);
     fs_emu_log("device: %s\n", device);
